--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: Global Fire Analysis
+description: Code used in the paper "Global Fire Season Severity Analysis and Forecasting"
+google_analytics: UA-18917131-1
+show_downloads: true
 theme: jekyll-theme-minimal
